2005-02-22  Murray Cumming  <murrayc@murrayc.com>

	* Fixed some broken docbook tags.

2005-02-22  Murray Cumming  <murrayc@murrayc.com>

	* rnapplications.xml: Added evolution stuff, based on an 
	announcement email.

2005-02-22  Murray Cumming  <murrayc@murrayc.com>

	* Added rngames.xml.
	* rndesktop.xml: Included rngames.xml.

2005-02-22  Murray Cumming  <murrayc@murrayc.com>

	* rndesktop.xml: Mention metacity focus-stealing prevention.
	* rnapplets.xml: Mention new Places and Desktop menus, replacing 
	Actions, and mention freedesktop menu spec.
	* rninstallation.xml: Remove the build order, because it is never 
	quite correct, and its far from enough information to build it, and 
	even if it was people would still have unique problems. Pointed 
	people to garnome and jhbuild instead. The LiveCD gets first mention, 
	of course.

2005-02-21  Murray Cumming  <murrayc@murrayc.com>

	*  press_release/gnome210_press_release.sxw: Changes based on 
	comments from Glynn Foster: Mention stability, regular releases, and 
	the LiveCD..

2005-02-20  Murray Cumming  <murrayc@murrayc.com>

	* press_release/gnome210_press_release.sxw: First version finished.

2005-02-20  Murray Cumming  <murrayc@murrayc.com>

	* releasenotes.xml: Added a continue-to link so people do not think 
	that is all there is.
	* rnapplications.xml: Added epiphany and skeleton for evolution.

2005-02-20  Murray Cumming  <murrayc@murrayc.com>

	* releasenotes.xml: Changed my mind about putting desktop after 
	applications, because there are so many applications changes.
	* rnutilities: Added floppy formatter.
	* rnsysadmin: Added g-s-t, and log-viewer.

2005-02-20  Murray Cumming  <murrayc@murrayc.com>

	* rndesktop.xml: Did nautilus and gnome-backgrounds bits.

2005-02-19  Murray Cumming  <murrayc@murrayc.com>

	* rnutilities.xml: Mentioned changes in search, archive manager, and 
	dictionary.
	* rncontrolcenter.xml: Mentioned better Keyboard Layout UI.
