@@ -141,12 +141,9 @@
     <para>
       For developers, there is much exciting progress to be made in any
       of our active developer groups - Accessibility, Documentation, Usability,
-      Translation, Web, Testing, Graphics and Desktop &amp; Platform
-      Development. Many of these sub-projects have web pages on <ulink
-      url="http://developer.gnome.org/projects/">developer.gnome.org</ulink>.
-      Choosing a role that suits you may be difficult at first, but here is a
-      <ulink url="http://developer.gnome.org/documents/joining-gnome">guide to
-      help you make your decision</ulink>.
+      Translation, Web, Testing, Graphics, and Desktop &amp; Platform
+      Development. Here is a 
+      <ulink url="http://live.gnome.org/JoinGnome">guide to help you get started</ulink>.
     </para>
     <para>
       Helping on GNOME can be an incredibly satisfying experience, allowing you
@@ -158,6 +155,6 @@
 <!--<xi:include href="rnthanks.xml"/>-->
       <appendix id="rncredits">
         <title>Credits</title>
-        <para>These release notes were assembled by Murray Cumming, Colin Charles, and Davyd Madeley.</para>
+        <para>These release notes were assembled by Murray Cumming, Davyd Madeley, and the GNOME community.</para>
       </appendix>
 </article>
